# csv2json

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  STORIES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
ejemplos/: sample.csv
script/: bump_build.py  package_project.py
src/csv2json/: __init__.py  cli.py  core.py  exceptions.py  models.py
tests/: test_cli.py  test_core.py
