[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2json"
version = "1.0.0"
description = "Typed CSV to JSON converter package and CLI for Python 3.13."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Copilot CLI" },
]
keywords = ["csv", "json", "converter", "cli", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/example/csv2json"
Documentation = "https://github.com/example/csv2json"

[project.scripts]
csv2json = "csv2json.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = """
(
  ^/ejemplos/
  | ^/script/
  | ^/docs/site/
)
"""

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["docs/site", "ejemplos", "script"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "D", "UP"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=src/csv2json --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/csv2json"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["csv2json"]
exclude = "(^ejemplos/|^script/|^docs/site/)"

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = ["ejemplos", "script", "docs/site"]
typeCheckingMode = "strict"

[tool.bandit]
exclude_dirs = ["tests", "ejemplos", "script", "docs/site"]
targets = ["src"]
